<resources>
    <string name="app_name">News app</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_your_account">Buat akun milikmu</string>
    <string name="fullname">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="sign_in">Masuk</string>
    <string name="create_an_account">Daftar</string>
    <string name="image">gambar</string>
    <string name="sign_up">Daftar</string>
    <string name="login">Masuk</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="sign_in_with_your_account">Masuk dengan akun milikmu</string>
    <string name="loq_out">Keluar</string>
    <string name="sponsored">Disponsori oleh : \nUniversitas Indraprasta PGRI</string>

    <string name="no_news">Belum ada berita disimpan</string>
    <string name="logo">logo news app</string>
    <string name="news_app">news app</string>
    <string name="slogan">memberimu kemudahan \ndalam mencari berita</string>
</resources>